added a map for the images of the recipe page

--- a/recipes/bulgogi.html
+++ b/recipes/bulgogi.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Bulgogi recipe</h1>
+    <img src="../images/bulgogi.png" alt="Image of Bulgogi Recipe" height="500" width="700">
+    <h3>Description</h3>
+    <p>Bulgogi (Korean: 불고기; American English /bʊlˈɡoʊɡiː/ buul-GOH-ghee; from Korean bul-gogi [pul.ɡo.ɡi]), literally "fire meat") is a gui (Korean-style grilled or roasted dish) made of thin, marinated slices of meat, most commonly beef, grilled on a barbecue or on a stove-top griddle.</p>
+
 </body>
 </html>
