--- a/recipes/bulgogi.html
+++ b/recipes/bulgogi.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bulgogi recipe</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Bulgogi recipe</h1>
-    <img src="../images/bulgogi.png" alt="Image of Bulgogi Recipe" height="500" width="700">
+    <img
+      src="../images/bulgogi.png"
+      alt="Image of Bulgogi Recipe"
+      height="500"
+      width="700"
+    />
     <h3>Description</h3>
-    <p>Bulgogi (Korean: 불고기; American English /bʊlˈɡoʊɡiː/ buul-GOH-ghee; from Korean bul-gogi [pul.ɡo.ɡi]), literally "fire meat") is a gui (Korean-style grilled or roasted dish) made of thin, marinated slices of meat, most commonly beef, grilled on a barbecue or on a stove-top griddle.</p>
-
-</body>
+    <p>
+      Bulgogi (Korean: 불고기; American English /bʊlˈɡoʊɡiː/ buul-GOH-ghee; from
+      Korean bul-gogi [pul.ɡo.ɡi]), literally "fire meat") is a gui
+      (Korean-style grilled or roasted dish) made of thin, marinated slices of
+      meat, most commonly beef, grilled on a barbecue or on a stove-top griddle.
+    </p>
+    <p>
+      The dish originated from northern areas of the Korean Peninsula, but is a
+      very popular dish in South Korea, where it can be found anywhere from
+      upscale restaurants to local supermarkets as pan-ready kits.
+    </p>
+  </body>
 </html>
