added new page for loaded fries recipe and added image to images repo

--- a/recipes/bulgogi.html
+++ b/recipes/bulgogi.html
@@ -25,5 +25,33 @@
       very popular dish in South Korea, where it can be found anywhere from
       upscale restaurants to local supermarkets as pan-ready kits.
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>1 pound of beef tenderloin</li>
+      <li>1/2 cup of crushed Korean pear</li>
+      <li>1/4 cup onion pureé</li>
+      <li>4 cloves of minced garlic</li>
+      <li>1 teaspoon minced ginger</li>
+      <li>2 tbs soy sauce</li>
+      <li>2 tbs brown sugar</li>
+      <li>a pinch of ground black pepper</li>
+      <li>1 tbs toasted sesame oil</li>
+      <li>several thin slices of carrot</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Mix all the marinade ingredients in a bowl.</li>
+      <li>Add the sliced beef and mix well.</li>
+      <li>
+        You can grill, pan-fry or BBQ right after marinating. It's best to keep
+        it in the fridge and let it marinate for at least 30 minutes
+      </li>
+      <li>Grill over medium-high heat.</li>
+      <li>
+        Serve with Korean side dishes (banchan) like kimchi, lettuce and
+        ssamjang.
+      </li>
+    </ol>
   </body>
 </html>
