--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipe Website</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/bulgogi.html">Bulgogi recipe</a>
-</body>
+    <ul>
+      <li><a href="./recipes/bulgogi.html">Bulgogi recipe</a></li>
+      <li><a href="./recipes/loadedfries.html">Loaded Fries recipe</a></li>
+    </ul>
+  </body>
 </html>
